--- a/Server/Server/Server/Server.csproj
+++ b/Server/Server/Server/Server.csproj
@@ -113,5 +113,8 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="DB\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
